# compress

./: .gitignore  README.md  compress.opam  dune-project  freqs.csv  huffman.opam
examples/: index.html  index.html.huf  index.html.lz78  index.html.lz78.decoded  index.html.lz78.huf  kons5  kons5.huf  kons5.lz78  kons5.lz78.huf
lib/: Huffman.ml  Lempel_ziv.ml  Tools.ml  dune
test/: dune  huffman.ml
