(library
 (name tools)
 (modules tools)
 (libraries unix))

(library
 (name huffman)
 (modules huffman)
 (libraries bitv tools)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))

(library
 (name lempel_ziv)
 (modules lempel_ziv)
 (libraries tools)
 (inline_tests)
 (preprocess (pps ppx_inline_test)))
